update fcm and cooperation scheduler